# puffin-app

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN-sync-improvements.md  README.md  SECURITY.md  TESTING.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/commands/: code-review.md  dev.md  reflection.md
.cursor/commands/: code-review.md
.github/workflows/: README.md  release.yml  test.yml
.husky/: README.md  pre-commit
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
app/: globals.css  layout.tsx  page.tsx
components/: sync-before-close-modal.tsx  sync-conflict-dialog.tsx  sync-required-modal.tsx  tauri-provider.tsx  update-notification-banner.tsx
data/: .sync-tokens.enc  puffin.db-shm  puffin.db-wal  sync-config.json
docs/: BUILD_TESTING.md  RELEASE_TASKS.md
hooks/: use-auth.tsx  use-google-picker.ts  use-page-state.tsx  use-sync-context.tsx  use-sync-status.ts
lib/: budget-status.test.ts  budget-status.ts  constants.ts  import-undo.ts  utils.ts  uuid.ts  validations.test.ts  validations.ts
lib/auth/: index.ts  (+6 more)
scripts/: build-static.js  build-test-linux.sh  build-test-windows.ps1  check-db.js  checkpoint-db.js  seed-test-data.js  show-schema.js  sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tasks/: deactivate-upper-categories.md
types/: database.ts  global.d.ts  import.ts  net-worth.ts  sync.test.ts  sync.ts
(+166 files in other folders)
