[package]
name = "puffin"
version = "0.1.0"
description = "Personal Unified Finance Framework & Investment Navigator"
authors = ["CuestaCodes"]
license = "MIT"
repository = "https://github.com/CuestaCodes/puffin-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "puffin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
